tests/paczka1/fuzzy1/73357985.err
Error in line 15: S446 A156 77,2
Error in line 20: 2XKC7Xgsmy6 A612 98,2
Error in line 14: pFxwLrinG A156 99,0
Error in line 22: S446 A612 39,2
Error in line 38: S446 A844 82,0
